[build-system]
requires = ["setuptools>=64", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "keras_custom"
description = "Custom Layers in keras 3"
readme = "README.md"
authors = [
    {email ="melanie.ducoffe@airbus.com"},
]
requires-python = ">=3.9"
dependencies =[
    "keras>=3",
]

dynamic = ["version"]

[project.urls]
documentation = "https://ducoffeM.github.io/keras_custom"
repository = "https://github.com/ducoffeM/keras_custom"

[project.optional-dependencies]
dev = ["tox>=4.6.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["keras_custom*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests/.*/setup.py
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

ignore_missing_imports = true