[build-system]
requires = ["setuptools>=64", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "keras_custom"
description = "Custom Layers in keras 3"
readme = "README.md"
authors = [
    {email ="melanie.ducoffe@airbus.com"},
]
requires-python = ">=3.9"
dependencies =[
    "torch",
    "keras>=3",
]

dynamic = ["version"]

[project.urls]
documentation = "https://ducoffeM.github.io/keras_custom"
repository = "https://github.com/ducoffeM/keras_custom"

[project.optional-dependencies]
dev = ["tox"]

[tool.tox]
requires = ["tox>=4.19"]
envlist = ["py39torch", "py39torchmps"]

# Environment for py39torch
[tool.tox.env.py39torch]
description = "Python 3.9 with torch"
commands = [
    ["pytest"]
]

# Environment for py39torchmps (example for a potential additional environment)
[tool.tox.env.py39torchmps]
description = "Python 3.9 with torch on MPS"
commands = [
    ["PYTORCH_ENABLE_MPS_FALLBACK=1 pytest"],
]


[tool.setuptools.packages.find]
where = ["keras_custom"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 100
target-version = ['py39torch']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
files = "keras_custom"
strict_optional = true
implicit_optional = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "keras.*",
    "torch.*"
]
ignore_missing_imports = true